Projects and text update

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,15 +4,15 @@
         About me.
         </h1>
         <p class="about-me__paragraph">
-            Employee at Competa IT as a full-stack developer. 
-            Doing multiple projects at the Competa office in an Agile (Scrum) environment.
-            As a employee I got the role of Scrum Master to support my team and guide them smoothly through the projects. 
-            Every sprint ends with giving a demo in front of a large audience. 
-            Besides accelerating my tech skills (JavaScript, Sass, Angular, task runners, PHP etc.) to a higher level, 
-            there is also time to develop soft skills.
+          I am employed at Competa IT as a full-stack developer.
+          I am working on  multiple projects at the Competa office in an Agile (Scrum) environment.
+          As an employee I got the role of Scrum Master. It is my task to support my team and guide them through the projects smoothly.
+          Every sprint ends with a demo in front of a large audience.
+          Besides accelerating my tech skills (JavaScript, Sass, Angular 2/4/5, task runners, PHP etc.) to a higher level,
+          I also get the chance to develop my soft skills.
         </p>
         <div class="about-me__languages">
-            <!-- <div class="about-me__languages-item"><img [src]="htmlImagePath"></div>
+            <div class="about-me__languages-item"><img [src]="htmlImagePath"></div>
             <div class="about-me__languages-item"><img [src]="cssImagePath"></div>
             <div class="about-me__languages-item"><img [src]="ngImagePath"></div>
             <div class="about-me__languages-item"><img [src]="ionImagePath"></div>
@@ -21,7 +21,7 @@
             <div class="about-me__languages-item"><img [src]="fbImagePath"></div>
             <div class="about-me__languages-item"><img [src]="gitImagePath"></div>
             <div class="about-me__languages-item"><img [src]="nodeImagePath"></div>
-            <div class="about-me__languages-item"><img [src]="styImagePath"></div> -->
+            <div class="about-me__languages-item"><img [src]="styImagePath"></div>
         </div>
     </div>
     <div class="image">
