--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     Hi There,
   </h1>
   <p class="home__paragraph">
-    “Nice to meet you, I’m Jeroen a Full-Stack Developer”
+    “Nice to meet you, I’m Jeroen, a Full-stack developer”
   </p>
   <div class="home__skew">
     <!-- <p class="home__skew-meetme">
