--- a/src/app/project-overview/project/project.component.scss
+++ b/src/app/project-overview/project/project.component.scss
@@ -1,247 +1,259 @@
 @import "./src/assets/scss/main";
 
 .project {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 50px 50px 0 0;
-    background: $darkgrey;
-    color: $white;
-    position: relative;
-    height: calc(100vh - 193px);
-    overflow: hidden;
-    
-    .content-left {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        
-        .info {
-            
-            &__title {
-                font-size: 46px;
-                font-weight: 700;
-                margin: 30px 0;
-                word-wrap: break-word;
-                padding: 0 50px;
-            }
-            
-            &__client {
-                font-size: 14px;
-                font-weight: 700;
-                text-transform: uppercase;
-                padding: 0 50px;
-                margin: 0px;
-                
-                &-name {
-                    font-size: 16px;
-                    font-style: italic;
-                    padding: 0 50px;
-                    margin: 0px;
-                }
-            }
-            
-            &__date {
-                font-size: 14px;
-                font-weight: 700;
-                text-transform: uppercase;
-                padding: 0 50px;
-                margin: 10px 0 0 0;
-                
-                &-time {
-                    font-style: italic;
-                    padding: 0 50px;
-                    margin: 0 0 10px 0;
-                }
-            }
-            
-            &__paragraph {
-                font-size: 16px;
-                font-weight: 400;
-                width: 90%;
-                padding: 0 50px;
-                margin: 10px 0;
-                word-wrap: break-word;
-                text-align: justify;
-            }
-            
-            &__link {
-                font-size: 33px;
-                width: 50px;
-                padding: 0 50px;
-                
-                & a {
-                    border-radius: 50%;
-                    height: 45px;
-                    width: 45px;
-                    text-align: center;
-                    align-self: center;
-                    background-color: $darkgrey;
-                    color: $white;
-                    margin: 5px;
-                    text-decoration: none;
-                    cursor: pointer;
-                    
-                    &:hover {
-                        background-color: $white;
-                        color: $darkgrey;
-                    }
-                    
-                    &::before {
-                        vertical-align: sub;
-                    }
-                }
-            }  
-        }
-        
-        .skill {
-            clip-path: polygon(
-            0 50%, /* left top */
-            100% 0, /* right top */
-            100% 100%, /* right bottom */
-            0 100% /* left bottom */
-            );
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            height: 250px;
-            width: -webkit-fill-available;
-            background: $lightgreen;
-            position: absolute;
-            bottom: 0px;
-            
-            &__container {
-                margin: 95px 0 0 30px;
-                
-                &-title {
-                    text-transform: uppercase;
-                    margin: 0;
-                    
-                }
-                
-                &-items {
-                    font-style: italic;
-                    margin: 0;
-                    width: 100%;
-                    word-wrap: break-word;
-                }
-            }
-        }
-    }
-    
-    .images {
-        margin: -50px 0 0 0;
-        max-width: 100%;
-        max-height: 100%;
-        z-index: 10;
-        
-        &__item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 50px 50px 0 0;
+  background: $darkgrey;
+  color: $white;
+  position: relative;
+  height: calc(100vh - 193px);
+  overflow: hidden;
 
-            &--full {
-                height: calc(100vh - 53px);
-                width: calc(50vw - 120px);
-                
-                & img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-            
-            &--wide {
-                // background-color: #eee; // Temporary 
-                height: calc(50vh - 53px);
-                width: 600px;
-                
-                & img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
-            
-            &--small {
-                // background-color: #ddd; // Temporary 
-                display: table-cell;
-                height: calc(50vh - 90px);
-                width: 300px;
-                
-                & img {
-                    width: 100%;
-                    height: 100%;
-                }
-            }
+  .content-left {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    .info {
+
+      &__title {
+        font-size: 46px;
+        font-weight: 700;
+        margin: 30px 0;
+        word-wrap: break-word;
+        padding: 0 50px;
+      }
+
+      &__client {
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 0 50px;
+        margin: 0px;
+
+        &-name {
+          font-size: 16px;
+          font-style: italic;
+          padding: 0 50px;
+          margin: 0px;
         }
+      }
+
+      &__date {
+        font-size: 14px;
+        font-weight: 700;
+        text-transform: uppercase;
+        padding: 0 50px;
+        margin: 10px 0 0 0;
+
+        &-time {
+          font-style: italic;
+          padding: 0 50px;
+          margin: 0 0 10px 0;
+        }
+      }
+
+      &__paragraph {
+        font-size: 16px;
+        font-weight: 400;
+        width: 84%;
+        padding: 0 50px;
+        margin: 10px 0;
+        word-wrap: break-word;
+        text-align: justify;
+      }
+
+      &__link {
+        font-size: 33px;
+        width: 50px;
+        padding: 0 50px;
+
+        & a {
+          border-radius: 50%;
+          height: 45px;
+          width: 45px;
+          text-align: center;
+          align-self: center;
+          background-color: $darkgrey;
+          color: $white;
+          margin: 5px;
+          text-decoration: none;
+          cursor: pointer;
+
+          &:hover {
+            background-color: $white;
+            color: $darkgrey;
+          }
+
+          &::before {
+            vertical-align: sub;
+          }
+        }
+      }
     }
-    
-    .sidemenu {
-        background: $darkgrey;
-        height: 100%;
-        
-        &__container {
-            margin: -50px -70px 0 0;
-            width: 200px;
-            z-index: 40;
-            position: absolute;
-            overflow: inherit;
+
+    .skill {
+      clip-path: polygon(
+      0 50%, /* left top */
+      100% 0, /* right top */
+      100% 100%, /* right bottom */
+      0 100% /* left bottom */
+      );
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 250px;
+      width: -webkit-fill-available;
+      background: $lightgreen;
+      position: absolute;
+      bottom: 0px;
+
+      &__container {
+        margin: 95px 0 0 30px;
+        color: $darkgrey;
+        width: 37%;
+
+        &-title {
+          text-transform: uppercase;
+          margin: 0;
         }
-        
-        &__sidenav-inside {
-            display: flex;
-            justify-content: center;
-            flex-direction: column;
-            background: $darkgrey;
-            color: $white;
-            padding: 20px;
-            width: 320px;
-            z-index: 18;
-            position: absolute;
-            margin-right: 100px;
+
+        &-items {
+          font-style: italic;
+          font-weight: 500;
+          margin: 0;
+          width: 100%;
+          word-wrap: break-word;
         }
-        
-        &__sidenav-outside {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            background: $darkgrey;
-            // height: 650px;
-            height: calc(100vh - 143px);
-            width: 50px;
-            margin: 0 30px 0 0;
-        }
-        
-        &__btn {
-            display: inline-flex;
-            text-decoration: none;
-            width: 230px;
-            
-            &:focus {
-                outline: none;
-            }
-            
-            &:hover {
-                background: $lightgreen;
-                cursor: pointer;
-            }
-            
-            &:hover &-number {
-                margin: 10px;
-                background: $lightgreen;
-            }
-            
-            &:hover &-title {
-                background: $lightgreen;
-            }
-            
-            &-number {
-                color: $white;
-                margin: 6px;
-                cursor: pointer;
-            }
-            
-            &-title {
-                margin: 8px 10px 6px 15px;
-                color: $white;
-            }
-        }
+      }
     }
+  }
+
+  .images {
+    margin: -50px 0 0 0;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 10;
+
+    &__item {
+
+      &--full {
+        height: calc(100vh - 53px);
+        width: calc(50vw - 120px);
+
+        & img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      &--new {
+        height: calc(100vh - 143px);
+        width: calc(50vw - 0px);
+
+        & img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+
+      // &--wide {
+      //   // background-color: #eee; // Temporary
+      //   height: calc(50vh - 53px);
+      //   width: 600px;
+
+      //   & img {
+      //     width: 100%;
+      //     height: 100%;
+      //   }
+      // }
+
+      // &--small {
+      //   // background-color: #ddd; // Temporary
+      //   display: table-cell;
+      //   height: calc(50vh - 90px);
+      //   width: 300px;
+
+      //   & img {
+      //     width: 100%;
+      //     height: 100%;
+      //   }
+      // }
+    }
+  }
+
+  .sidemenu {
+    background: $darkgrey;
+    height: 100%;
+
+    &__container {
+      margin: -50px -70px 0 0;
+      width: 200px;
+      z-index: 40;
+      position: absolute;
+      overflow: inherit;
+    }
+
+    &__sidenav-inside {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      background: $darkgrey;
+      color: $white;
+      padding: 20px;
+      width: 320px;
+      z-index: 18;
+      position: absolute;
+      margin-right: 100px;
+    }
+
+    &__sidenav-outside {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      background: $darkgrey;
+      // height: 650px;
+      height: calc(100vh - 143px);
+      width: 50px;
+      margin: 0 30px 0 0;
+    }
+
+    &__btn {
+      display: inline-flex;
+      text-decoration: none;
+      width: 230px;
+
+      &:focus {
+        outline: none;
+      }
+
+      &:hover {
+        background: $lightgreen;
+        cursor: pointer;
+      }
+
+      &:hover &-number {
+        margin: 10px;
+        background: $lightgreen;
+      }
+
+      &:hover &-title {
+        background: $lightgreen;
+      }
+
+      &-number {
+        color: $white;
+        margin: 6px;
+        cursor: pointer;
+      }
+
+      &-title {
+        margin: 8px 10px 6px 15px;
+        color: $white;
+      }
+    }
+  }
 }
