--- a/src/app/project-overview/ngxmatfire/ngxmatfire.component.html
+++ b/src/app/project-overview/ngxmatfire/ngxmatfire.component.html
@@ -6,20 +6,20 @@
       </h1>
       <h5 class="info__client">Client</h5>
       <p class="info__client-name">Open Source</p>
-      
+
       <h5 class="info__date">Date</h5>
       <p class="info__date-time">04 / 2017 - now</p>
-      
+
       <p class="info__paragraph">
-        Full stack starter app, Angular 5 front-end with Material Design and Firebase back-end (0Auth authentication and NoSQL database).
+        Full-stack starter app, Angular 5 Front-end with Material Design and Firebase Back-end (0Auth authentication and NoSQL database).
       </p>
-      
+
       <div class="info__link">
         <a href="https://github.com/jeroenouw/AngularMaterialFirebase" target="_blank" class="fa fa-link" aria-hidden="true"></a>
       </div>
-      
+
     </div>
-    
+
     <div class="skill">
       <div class="skill__container">
         <h5 class="skill__container-title">Skills used</h5>
@@ -29,15 +29,15 @@
       </div>
     </div>
   </div>
-  
+
   <div class="images">
-    <div class="images__item images__item--full"><img [src]="onlyImagePath"></div>
+    <div class="images__item images__item--new"><img [src]="onlyImagePath"></div>
   </div>
-  
+
   <div class="sidemenu">
-    
+
     <mat-sidenav-container class="sidemenu__container">
-      
+
       <mat-sidenav align="end" mode="over" #sidenav class="sidemenu__sidenav-inside">
         <a class="sidemenu__btn" routerLink="/projects/ftsf-webshop" (click)="sidenav.toggle()">
           <h3 class="sidemenu__btn-number">01</h3>
@@ -60,7 +60,7 @@
           <h4 class="sidemenu__btn-title">Angular AI</h4>
         </a>
       </mat-sidenav>
-      
+
       <div class="sidemenu__sidenav-outside">
         <a (click)="sidenav.open()">
           <h3 class="sidemenu__btn-number">01</h3>
@@ -78,9 +78,9 @@
           <h3 class="sidemenu__btn-number">05</h3>
         </a>
       </div>
-      
+
     </mat-sidenav-container>
-    
+
   </div>
-  
+
 </div>
