--- a/src/app/project-overview/project/project-mobile.component.scss
+++ b/src/app/project-overview/project/project-mobile.component.scss
@@ -5,34 +5,39 @@
         padding: 50px 50px 0 0;
         margin-right: -90px;
         height: 100vh;
-        
+
         .content-left {
-            
+
             .info {
                 &__paragraph {
                     width: 75%;
                 }
             }
-            
+
             .skill {
                 height: 130px;
                 padding: 0 0 20px 0;
-                
+
                 &__container {
-                    
-                    &-items {
-                        width: 90%;
-                    }
+                  width: 100%;
+
+                  &-title {
+                      text-transform: uppercase;
+                      margin: 0;
+                  }
+
+                  &-items {
+                      width: 90%;
+                  }
                 }
             }
         }
-        
+
         .images {
             display: none;
         }
-        
-        .sidemenu {
 
+        .sidemenu {
             &__sidenav-inside {
                 width: 435px;
                 padding: 20px 20px 20px 30px;
